@@ -9,6 +9,15 @@
     // "DateFormat" : "DD/MM/YYYY",
 
     /**
+     * Defines how times are displayed in the UI. If this option is not
+     * set, the DICOM tags will be displayed as such. "hh" will be
+     * replaced by the hour, "mm" by the minutes, "ss" by the seconds
+     * and ".f" by the fractions of seconds.
+     **/
+    // "TimeFormat" : "hh:mm:ss.f",
+
+
+    /**
      * This option allows you to define windowing presets.
      * For each preset, you must provide a name, the window width
      * and window center.
