@@ -672,7 +672,8 @@
                   </div>
                   <div v-if="'tags' in content.series" class="wv-overlay-topright">
                     {{ content.series.tags[STUDY_DESCRIPTION] }}<br/>
-                    {{ app.FormatDate(content.series.tags[STUDY_DATE]) }}<br/>
+                    <span v-if="contentDate !== undefined && contentDate != ''">{{ app.FormatDate(contentDate) }} <span v-show="contentTime != ''">{{ app.FormatTime(contentTime) }}</span><br/></span>
+                    <span v-else="contentDate === undefined || contentDate == ''">{{ app.FormatDate(content.series.tags[STUDY_DATE]) }}<br/></span>
                     {{ content.series.tags[SERIES_NUMBER] }} | {{ content.series.tags[SERIES_DESCRIPTION] }}
                   </div>
                   <div class="wv-overlay-bottomleft wvPrintExclude" style="bottom: 0px">
@@ -813,9 +814,6 @@
         </div>
       </div>
     </script>
-
-    
-
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/vue.min.js"></script>
